--- a/hyper/src/html/index.html
+++ b/hyper/src/html/index.html
@@ -24,7 +24,7 @@
     <body class="loading" data-layout-config='{"leftSideBarTheme":"dark","layoutBoxed":false, "leftSidebarCondensed":false, "leftSidebarScrollable":false,"darkMode":false, "showRightSidebarOnStart": false}'>
         <!-- Begin page -->
         <div class="wrapper">
-            @@include('./partials/left-sidebar.html')
+            @@include('./partials/left-sidebar-AM.html')
 
             <!-- ============================================================== -->
             <!-- Start Page Content here -->
