Updates to system and index

--- a/hyper/src/html/system.html
+++ b/hyper/src/html/system.html
@@ -47,7 +47,8 @@
                                              <button class="btn btn-secondary mt-1 mb-1 btn-rounded" type=button id="amcustom-btn" data-toggle="modal" data-target=#ResetformModal>Update Settings</button>
                                         
                                     </div> -->
-                                   <button class="btn btn-secondary mt-2 mb-2 btn-rounded" type=button id="amcustom-btn" data-toggle="modal" data-target=#ResetformModal>Update Settings</button>
+                                   <button class="btn btn-primary mt-2 mb-2 btn-rounded" type=button id="updatesettings-btn" data-toggle="modal" data-target=#ResetformModal>Update Settings</button>
+								   <button class="btn btn-primary mt-2 mb-2 btn-rounded float-right" type=button id="helpsystem-btn" data-toggle="modal" data-target=#HelpSystem>Help?</button>
                                     <!-- <h4 class="page-title">System Settings</h4> -->
                                 </div>
                             </div>
